<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>pkg_app</name>
  <version>0.0.0</version>
  <description>Custom intermediate package.</description>
  <maintainer email="nobody@nowhere.ch">Some developers</maintainer>
  <license>Closed</license>

  <build_depend>catkin</build_depend>
  <build_depend>catkin_simple</build_depend>

  <depend>pkg_downstream</depend>
</package>
