<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>pkg_b</name>
  <version>0.0.0</version>
  <description>Custom intermediate package.</description>
  <maintainer email="nobody@nowhere.ch">Some developers</maintainer>
  <license>Closed</license>

  <build_depend>catkin</build_depend>

  <depend>base_msgs</depend>
</package>
